--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <meta property="og:title" content="Угадай Животное - Интерактивная Викторина">
 <meta property="og:description" content="Проверьте свои знания о животных в увлекательной викторине 'Угадай Животное'!">
 <meta property="og:image" content="logo.jpg">
-<meta property="og:url" content="URL_вашего_сайта_или_игры">
+<meta property="og:url" content="https://github.com/CarolineP-12/quizGuessTheAnimal.git">
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:title" content="Угадай Животное - Интерактивная Викторина">
 <meta name="twitter:description" content="Присоединяйтесь к увлекательной викторине 'Угадай Животное'!">
