--- a/index.html
+++ b/index.html
@@ -27,6 +27,6 @@
     </div>
 <div class="info"></div>
 
-    <script src="./script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
