--- a/index.html
+++ b/index.html
@@ -21,9 +21,8 @@
 <body>
     <h1>Угадай животное</h1>
     <div>
-        <button class="b-1">Млекопитающие</button>
-        <button class="b-2">Рептилии</button>
-        <button class="b-3">Морские животные</button>
+        <button class="b-1">Начать</button>
+
     </div>
 <div class="info"></div>
 
